--- a/basic/web/WEB-INF/web.xml
+++ b/basic/web/WEB-INF/web.xml
@@ -5,4 +5,12 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
            version="3.0">
 
+    <servlet>
+        <servlet-name>Servlet</servlet-name>
+        <servlet-class>data.Servlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Servlet</servlet-name>
+        <url-pattern>/query</url-pattern>
+    </servlet-mapping>
 </web-app>
